@@ -1,1 +1,26 @@
 # MULTI2022
+
+## Towards Integration-Preserving Customization of Just-in-Time Adaptive Interventions with Composite Clabjects in RDF and SHACL
+
+### Foundations
+
+* RDF: https://www.w3.org/TR/rdf11-primer/
+* SPARQL: https://www.w3.org/TR/sparql11-query/
+* SHACL: https://www.w3.org/TR/shacl/
+* SHACL Advanced Features: https://www.w3.org/TR/shacl-af/
+
+### Prerequisites
+
+1. (Oracle) JDK Version 18
+2. In case your JDK does not come with the JavaFX SDK, you also need to download it: https://openjfx.io/
+
+### Running
+
+1. Double click or run it via console: java -jar mlm-playground.jar
+2. In case you downloaded the JavaFX SDK, you have to run it via console:<br/>
+java --module-path "\<path to your JavaFX SDK lib folder\>" --add-modules javafx.controls,javafx.fxml -jar mlm-playground-basic.jar
+
+
+### MLM-Playground
+
+By default all examples from the paper are loaded.
